@@ -9,9 +9,6 @@
     <li class="save">
         <a href="#save">Save image as ...</a>
     </li>
-    <li class="export">
-        <a href="#export">Export graph ...</a>
-    </li>
     <li class="tinylegend">
         <a href="#tinylegend">Toggle legend</a>
     </li>
