@@ -18,6 +18,8 @@
 - New clipboard feature to store graph definitions (for copy/paste to selections)
 - New zoom on graph. The new one is intuitive.
 - Peuplator can now clean the database (remove orphan items)
+- Removed "export" broken feature for graphs.
+- Disambiguation for licenses in some files
 
 2013-08-29, Version 1.3
 
